# synth-nfa-generator

./: .gitignore  README.md  bent_rod.py  exp_bent_rod.md  gen_video.py  grid_mesh.py  grid_teeth.md  mypyply.py  oxides.py  pyproject.toml  requirements.txt  rods_hexagon.py  scene_definition.py  setup.py  synt-explore.md  tips.ipynb  video_generator.md
assets/: README.md  butt_wta.ply  grid_teeth.blend  grid_teeth.ply  grid_tvel2.ply  grid_wta.ply  grid_wta_dented.ply  grid_wta_holes.ply  grid_wta_smooth_norm.ply  spectrum_inconel.csv  spectrum_zirconium.csv  tip_model.ply  tip_wta.ply
notebook/: inverse_rendering.ipynb  inverse_rendering.md  paper-figures.md  tips.md
synthnf/: app.py  run_script.py
synthnf/config/: assets.py  defaults.py
synthnf/geometry/: base.py  curves.py  fuel_rods_mesh.py  rod_tips_mesh.py  spacer_grid_mesh.py
synthnf/inspection/: __init__.py  base_inspection.py  swing_supressing_inspection.py  video.py
synthnf/io/: __init__.py  fs.py  ply.py
synthnf/material/: __init__.py  base.py
synthnf/materials/: __init__.py  effects.py  surface.py  textures.py
synthnf/models/: base.py
synthnf/report/: __init__.py  plotting.py
synthnf/scene/: __init__.py  base.py  camera.py  scene_models.py
synthnf/simulation/: __init__.py  artificial.py  oxides.py
synthnf/utils/: __init__.py  math.py
venv_synt/Scripts/: activate  activate.bat
venv_synt/share/pkgconfig/: zlib.pc
