[tool.poetry]
name = "synthdata"
version = "0.1.0"
description = ""
authors = ["Jaroslav Knotek <knotek@utia.cas.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
mitsuba = "^3.0.1"
ipywidgets = "^8.0.2"
h5py = "^3.7.0"
scipy = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
